# kyivnotkiev

./: .env.example  .gitignore  AUDIT_REPORT.md  CL_THESIS.md  CRIMEA_ANALYSIS.md  DATA_COVERAGE.md  Dockerfile  Makefile  README.md  TODO_DATA_QUALITY.md  pyproject.toml  requirements.txt  spec.md
config/: pairs.yaml  pipeline.yaml  sources.yaml
data/: toponym_pairs.json
data/cl/: .gitignore
data/processed/: cross_source_summary.csv  openalex_summary.csv  reddit_summary.csv  religious_summary.csv
dataset/: .gitignore  README.md
docs/: SPEC.md  policy-recommendations-research.md
infrastructure/: README.md  bigquery.tf  cloud_run.tf  cloud_run.tf.deferred  dataproc.tf  dataproc.tf.deferred  main.tf  outputs.tf  storage.tf  variables.tf
paper/: GAP_ANALYSIS_RESULTS.md  LANGUAGE_POLICY_DRAFT.md  REPORT.md  build_paper.py  kyivnotkiev_cl_paper.docx  kyivnotkiev_cl_paper.tex  main.docx  main.tex
paper/figures/: modern_category_country_gdelt.html  modern_category_dumbbell.html  modern_category_food_gdelt.html  modern_category_geographical_gdelt.html  modern_category_historical_gdelt.html  modern_category_landmarks_gdelt.html  (+7 more)
pipeline/: README.md  __init__.py  __main__.py  config.py  export_dataset.py  export_site_data.py  generate_reports.py  generate_reports_docx.py
scripts/: build_docx.py  gap_analysis.py  generate_summary.py  process_all.py  process_gdelt_geographic.py  process_gdelt_raw.py  process_trends_raw.py  run_analysis.py  run_collect.py  run_pipeline.py  run_viz.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
src/: config.py
tests/: test_changepoint.py  test_cl_pipeline.py  test_config.py  test_export_site_data.py  test_geographic.py  test_preprocess.py  test_russia_filter.py  test_statistical_tests.py
website/: index.html
(+10981 files in other folders)
