[project]
name = "kyivnotkiev"
version = "2.0.0"
description = "Multi-source computational analysis of Ukrainian toponym adoption using Apache Spark on GCP"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5",
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "google-cloud-dataproc>=5.9",
    "db-dtypes>=1.2",
    "pyyaml>=6.0",
    "pytrends>=4.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "ruptures>=1.1",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "warcio>=1.7",
    "zstandard>=0.22",
    "click>=8.1",
    "tqdm>=4.66",
    "tenacity>=8.2",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
